# bc-seek

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  cppcheck-suppressions.txt  meson.build  meson_options.txt  valgrind.supp
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  rules
fuzzing/: .gitignore  build.sh  fuzz_bc_seek_cli_parse.c  fuzz_bc_seek_filter_parsers.c  fuzz_bc_seek_glob_match.c  meson.build  run.sh
fuzzing/corpus/bc_seek_filter_parsers/: seed_size_pos.txt
include/internal/: bc_seek_byte_buffer_internal.h  bc_seek_cli_internal.h  bc_seek_dirent_internal.h  bc_seek_discovery_internal.h  bc_seek_error_internal.h  bc_seek_filter_internal.h  bc_seek_output_internal.h  bc_seek_strings_internal.h  bc_seek_types_internal.h
scripts/: bench.sh
src/: bc_seek_main.c  meson.build
src/cli/: bc_seek_cli_parsers.c  bc_seek_cli_spec.c
src/discovery/: bc_seek_byte_buffer.c  bc_seek_dirent.c  bc_seek_discovery_walk_parallel.c  bc_seek_discovery_walk_sequential.c
src/error/: bc_seek_error_collector.c
src/filter/: bc_seek_filter.c
src/output/: bc_seek_output.c
src/strings/: bc_seek_strings.c
tests/: meson.build  test_bc_seek_cli_parsers_unit.c  test_bc_seek_cli_spec_unit.c  test_bc_seek_end_to_end.c  test_bc_seek_error_unit.c  test_bc_seek_filter_unit.c
